#128 Edit vmoptions for java 11 to avoid tons of classnotfound warnings. See: https://github.com/sonatype/nexus-public/issues/118